[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Jerry <zhangji87@gmail.com>"]
readme = "README.md"
packages = [
    { include = "poetrydemo" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = {version = "^21.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"
